# wasmex

native/wasmex/: Cargo.toml
native/wasmex/src/: engine.rs  environment.rs  functions.rs  instance.rs  lib.rs  memory.rs  module.rs  store.rs
test/: test_helper.exs
