[package]
name = "wasmex"
version = "0.8.2"
authors = ["Philipp Tessenow <philipp@tessenow.org>"]
description = "Elixir extension to run WebAssembly binaries through wasmtime"
readme = "README.md"
repository = "https://github.com/tessi/wasmex"
keywords = ["elixir", "extension", "webassembly", "wasmtime"]
categories = ["wasm"]
edition = "2021"

[lib]
name = "wasmex"
path = "src/lib.rs"
crate-type = ["dylib"]

[dependencies]
rustler = "0.26.0"
once_cell = "1.17.0"
rand = "0.8.5"
# wasmtime = "4.0.0"
wasmtime = { git = "https://github.com/bytecodealliance/wasmtime.git", features = ["component-model"] }
wasmtime-wasi = { git = "https://github.com/bytecodealliance/wasmtime.git" }
wasi-common = { git = "https://github.com/bytecodealliance/wasmtime.git" }
wiggle = { git = "https://github.com/bytecodealliance/wasmtime.git" }
wat = "1.0.61"
